--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ Jinja2==3.0.3
 MarkupSafe==2.0.1
 python-dotenv==0.19.2
 Werkzeug==2.0.3
+Email-validator==1.1.3
+Flask-WTF==1.0.0
+Flask-Mail==0.9.1
